--- a/app/views/admin/snippets/edit.html.erb
+++ b/app/views/admin/snippets/edit.html.erb
@@ -6,6 +6,6 @@
 <% form_for(:snippet, :url => object_url, :html => { :method => :put }) do |f| -%>
   <%= render :partial => "form", :locals => { :f => f } %>
   <p>
-    <%=submit_tag t("update"), {"class" => "wymupdate"}%> or <%= link_to t("cancel"), admin_pages_path%>
+    <%=submit_tag t("update"), {"class" => "wymupdate"}%> or <%= link_to t("cancel"), admin_snippets_path%>
   </p>
 <% end %>
